Mobile menu hidden overflow fix

--- a/themes/notepad/css/post.css
+++ b/themes/notepad/css/post.css
@@ -314,9 +314,9 @@ html, body, .summer-post-container, .summer-post-header {
   text-align: center;
   text-transform: uppercase;
 }
-.summer-page-container .summer-page-header {
+/*.summer-page-container .summer-page-header {
   overflow: hidden;
-}
+}*/
 .summer-page-container .summer-page-content {
   margin: 0 auto;
   padding: 0 0 5rem;
